# hh_db

./: .gitignore  README.md  pyproject.toml
hh_db/: main.py
hh_db/db_manager/: config.py  db_manager.py  db_requests.py  get_db_config.py
hh_db/get_data/: company_config.py  get_company.py  get_vacancies.py
